--- a/MySite/index.html
+++ b/MySite/index.html
@@ -31,15 +31,12 @@
             <img class="coding" src="images/giphy.gif" alt="">
             <!-- <div style="width:100%;height:0;padding-bottom:100%;position:relative;"><iframe src="https://giphy.com/embed/17b875GGvV9m9sLmNc" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div> -->
             <h3 style="text-align: left;">Coding</h3>
-            <p>I am a competitive coder. I know JAVA, C++, Python, HTML, CSS, JavaScript. I am a front end website and JAVA developer. Have worked on many projects.
-
-
-            </p>
+            <p>I am a competitive coder. I know JAVA, C++, Python, HTML, CSS, JavaScript. Besides this I am also familiar with git and github. I am a front end website and JAVA developer and have worked on many projects.</p>
           </div>
           <div class="skill-row">
             <img class="garden" src="images/plant.png" alt="">
             <h3 style="text-align: left;">Gardening</h3>
-            <p>I am obsessed with plants and love to grow with them. I am fond of eating my own grown food. </p>
+            <p>I am obsessed with plants and love to grow with them. I am fond of eating my own grown food. It's one of hobbies besides playing bamboo flute and reading books.</p>
           </div>
         </div>
         <hr>
